[package]
name = "lmp"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["std"] }
lightning = "0.1.1"
secp256k1 = { version = "0.30.0", features = ["rand", "lowmemory"] }
tokio = { version = "1.43.0", features = [
    "net",
    "rt",
    "sync",
    "rt-multi-thread",
    "macros",
] }
